
  Merged select changes from libXaw3d 2013-06-06 to 2024-11-10.

  Fixed GCC 14 FTB (incompatible pointer type) in XawIm.c.
  Fixed vertical spacing in List when FreeType is used.
  Fixed wrong highlighting width in List when FreeType is used.
  Fixed blank first column in multicolumn SimpleMenu.
  Fixed description in libxaw3dxft.pc.in (was from libXaw3d).
  Fixed omission of Xaw3dXftP.h from xaw3dinclude_HEADERS in Makefile.am.
  Added example Xresources (was Xdefault) and old READMEs to installed docs.

  Began using normal Semantic Versioning.  libXaw3dXft version numbers no
  longer have anything to do with libXaw3d releases and no longer have a
  letter suffix.

2020-07-02, v1.6.2h (so 8.0.5)  Jean-Pierre Demailly

	* TextAction.c: further small enhancements to the edition routines,
	  in such a way that  _Xaw3dXft->edit_delete_alternative = 2
	  corresponds to the default behavior of modern text widgets.

2020-06-30, v1.6.2g  Jean-Pierre Demailly

	* Text.c: the new parameter _Xaw3dXft->text_sb_right (set to 1)
	  allows text widget scrollbars to be put on the right edge
	  of windows.

2020-06-16, v1.6.2f  Jean-Pierre Demailly

	* TextAction.c: two functions added, namely
	    DeleteBackwardCharOnly(), KillCurrentSelectionOrBackwardChar()
	  while DeleteBackwardChar() was modified, and corresponding
	  bindings
	    delete-previous-char-only,  kill-selection-or-char
	  introduced for app-defaults callbacks, so as to accommodate
	  modern editing behavior: BackSpace and Delete keys can now
	  optionally kill the text selection if it is non empty, and
	  otherwise they kill the character backward.
	  This behavior is not enabled by default, but becomes active
	  by setting  _Xaw3dXft->edit_delete_alternative = 1;

2016-12-10, v1.6.2e  Jean-Pierre Demailly

	* 3 line addition in Command.c that circumvents what seems to be
	  a bug of certain X11/Xorg drivers, e.g. the intel driver,
	  version 2.99.917. No other significant change.
